@@ -10,7 +10,7 @@ blueox
 """
 
 __title__ = 'blueox'
-__version__ = '0.5.3'
+__version__ = '0.5.4'
 __author__ = 'Rhett Garber'
 __author_email__ = 'rhettg@gmail.com'
 __license__ = 'ISC'
